# paper_2025_xplainfi_benchmark

./: .Rprofile  .gitignore  A01-results-importance.Rmd  A02-results-runtime.Rmd  A02-results-runtime.html  README.md  collect-results-importance.R  collect-results-runtime.R  config-importance.R  config-runtime.R  pyproject.toml  rproject.toml  run-experiment-importance.R  run-experiment-runtime.R  setup-batchtools-importance.R  setup-batchtools-runtime.R  setup-common.R
R/: algorithms.R  clean-results.R  helpers-python.R  helpers.R  plotting.R  problems.R
registries/: .gitignore
results/importance/: importances.rds
results/runtime/: runtime.rds
