[project]
name = "xplainfi-benchmark"
version = "0.1.0"
description = "Python dependencies for xplainfi benchmark experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy==2.3.5",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "xgboost==3.1.2",
    "category-encoders==2.9.0",
    "torch==2.9.1",
    "sage-importance==0.0.6",
    "fippy @ git+https://github.com/gcskoenig/fippy@a7a37aa5511f7074ead3289c89b1ae80036982cb",
]

[tool.uv]
# Use CPU-only PyTorch index
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
